Fix- video iframe overlap

--- a/src/components/Landing/LangingPage.scss
+++ b/src/components/Landing/LangingPage.scss
@@ -31,6 +31,7 @@
   // background: $scoar-purple;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
+  z-index: 9999;
 
   &__logo {
     display: flex;
