--- a/src/components/Whiteboard/whiteboard.scss
+++ b/src/components/Whiteboard/whiteboard.scss
@@ -13,3 +13,8 @@
     align-items: center;
   }
 }
+
+// Fix- video iframe overlap
+iframe{
+  z-index: 0;
+}
